--- a/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso010/Alumno.html
+++ b/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso010/Alumno.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html hola_ext_inject="disabled" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title></title>
 		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
@@ -7,29 +7,47 @@
 		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
+		<p class="cabecera1">
+			Etapas de la evoluci&oacute;n pol&iacute;tico-administrativa en el Nuevo Reino de Granada</p>
 		<p class="cabecera2">
-			La evoluci&oacute;n pol&iacute;tico-administrativa en el Nuevo Reino de Granada</p>
+			Las primeras gobernaciones</p>
 		<p class="normal">
-			Poco despu&eacute;s de que los primeros conquistadores llegaron a las costas del actual territorio de Colombia, le dieron forma a los primeros asentamientos y a los primeros entes administrativos en tierra firme. Formas que correspond&iacute;an a peque&ntilde;os poblados que, en su mayor&iacute;a, eran fuertes militares ubicados en las costas o cerca de ellas, m&aacute;s los territorios vecinos a esos poblados.</p>
+			Los primeros<span class="negrita"> conquistadores </span>que arribaron <span class="negrita">al Nuevo Mundo </span>estaban autorizados por<span class="negrita"> la Corona </span>para cumplir las labores de autoridad all&iacute; donde llegaran (adelantados). Lo que significaba que pod&iacute;an <span class="negrita">establecer sus propias leyes</span>.</p>
 		<p class="normal">
-			Estos serv&iacute;an como puntos de avance para la exploraci&oacute;n, conquista y colonizaci&oacute;n de tierras que se extend&iacute;an hacia el interior del continente. Los primeros poblados fueron San Sebasti&aacute;n de Urab&aacute; y Santa Mar&iacute;a la Antigua del Dari&eacute;n, ambos en el golfo de Urab&aacute;.</p>
+			Entre 1524 y 1540, los conquistadores comenzaron a fundar ciudades y en nombre de la Corona tomaron vastos territorios, lo que poco a poco oblig&oacute; a la monarqu&iacute;a a <span class="negrita">crear las primeras gobernaciones en Am&eacute;rica</span>.</p>
 		<p class="normal">
-			&ldquo;1509&ndash;1549: &#39;Tierra Firme&#39; fue el nombre inicial que los espa&ntilde;oles reci&eacute;n llegados asignaron al territorio americano a lo que hoy es Colombia. Reinaban los Habsburgo en la Pen&iacute;nsula Ib&eacute;rica. Dos gobernaciones fueron las primeras divisiones territoriales decretadas por la Corona: Nueva Andaluc&iacute;a [gobernaci&oacute;n de Urab&aacute; que m&aacute;s tarde se dividir&iacute;a en las gobernaciones de Santa Marta, Cartagena y Caracas] y Castilla de Oro.</p>
+			<span class="negrita">La primera gobernaci&oacute;n del Nuevo Reino de Granada fue Santa Marta</span> (1525), que se extend&iacute;a desde el cabo de la Vela hasta la desembocadura del r&iacute;o Magdalena; su primer gobernador fue <span class="negrita">Rodrigo de Bastidas</span>.</p>
 		<p class="normal">
-			La primera, entre La Guajira y Urab&aacute;, estuvo a cargo del gobernador Alonso de Ojeda. La segunda, entre Urab&aacute; y Veraguas (hoy Panam&aacute;), estuvo a cargo de Diego de Nicuesa. [Una y otra depend&iacute;an de la Real Audiencia de Santo Domingo].</p>
+			<span class="negrita">La segunda gobernaci&oacute;n fue Cartagena </span>(1533), que iba desde la desembocadura del r&iacute;o Magdalena hasta Urab&aacute;; la Corona le otorg&oacute; a <span class="negrita">Pedro de Heredia</span> esta gobernaci&oacute;n.</p>
 		<p class="normal">
-			En 1513, la Corona suprimi&oacute; la gobernaci&oacute;n de Nueva Andaluc&iacute;a, redefini&oacute; la de Castilla de Oro y cre&oacute; la gobernaci&oacute;n del Choc&oacute;. Los expedicionarios fundaron por esos a&ntilde;os a San Sebasti&aacute;n de Urab&aacute; (1509), Santa Mar&iacute;a del Dari&eacute;n (1510) y Panam&aacute; (1513), a&ntilde;o en que Vasco N&uacute;&ntilde;ez de Balboa atraviesa el istmo y encuentra un mar al sur, el oc&eacute;ano Pac&iacute;fico.</p>
+			<span class="negrita">La tercera fue la de Popay&aacute;n</span>, creada en 1537. Abarcaba un vasto territorio que se prolongaba al norte hasta los l&iacute;mites con la gobernaci&oacute;n de Cartagena; al sur se extend&iacute;a hasta la frontera con la Audiencia de Quito. Su primer gobernador fue <span class="negrita">Sebasti&aacute;n de Belalc&aacute;zar</span>, nombrado en 1540.</p>
+		<p class="cabecera2">
+			La Real Audiencia en el Nuevo Reino de Granada</p>
 		<p class="normal">
-			En 1542, el territorio se divid&iacute;a en tres gobernaciones relacionadas con la fundaci&oacute;n de las que fueron sus respectivas capitales: Santa Marta (1525), Cartagena (1533) y Popay&aacute;n (1536), &eacute;poca temprana en la que se establecen dos instituciones: encomienda y municipio.</p>
+			El 12 de abril de 1550 la Corona instal&oacute; la<span class="negrita"> Real Audiencia de Santaf&eacute;</span> con el fin de <span class="negrita">administrar justicia y proteger a los ind&iacute;genas</span>. Esta Audiencia tuvo jurisdicci&oacute;n sobre las gobernaciones de Santa Marta y Cartagena, y sobre el Nuevo Reino de Granada. Antes de esa fecha las gobernaciones de Popay&aacute;n y Cartagena depend&iacute;an de la Audiencia de Panam&aacute;, establecida en 1538, y Santa Marta, de la Audiencia de Santo Domingo (1511), la primera creada en Am&eacute;rica.</p>
 		<p class="normal">
-			1550-1717: en abril de 1550, se instala en Santa Fe la Real Audiencia de la Nueva Granada, dependiente del Virreinato del Per&uacute;. Componen la audiencia cuatro partes: una central, el Nuevo Reino de Granada, y tres perif&eacute;ricas, las gobernaciones de Santa Marta, Cartagena y Popay&aacute;n.</p>
+			Sus <span class="negrita">funciones</span> eran varias:&nbsp;<span class="negrita">crear leyes que protegieran a la poblaci&oacute;n nativa, hacer visitas judiciales y de control al territorio de los gobernadores, y desarrollar y poner en funcionamiento pol&iacute;ticas de expansi&oacute;n y poblamiento</span> a trav&eacute;s de la fundaci&oacute;n de ciudades y de la creaci&oacute;n de centros mineros.</p>
+		<p>
+			<span style="font-size: 20px; line-height: 1em;">Periodo de los presidentes letrados (1564-1605)</span></p>
 		<p class="normal">
-			1717-1810: el dominio de los Borbones sustituye al de los Habsburgo; centralizan m&aacute;s el poder, antes relativamente federado. Felipe V crea [nuevos] virreinatos en Am&eacute;rica: el del&nbsp; R&iacute;o de la Plata y el de la Nueva Granada.</p>
+			A medida que crec&iacute;a el n&uacute;mero de pobladores tambi&eacute;n aumentaban los problemas, por lo que la Real Audiencia termin&oacute; siendo ineficaz. <span class="negrita">La Corona decidi&oacute; limitar sus tareas al plano jur&iacute;dico</span>, y nombr&oacute; un presidente de la Real Audiencia, quien ten&iacute;a funciones civiles y militares para gobernar, y pod&iacute;a hacerlo con independencia del virrey del Per&uacute;, aun cuando se formaba parte de ese virreinato.<br />
+			A lo largo de este periodo, todos los espa&ntilde;oles que ocuparon este cargo fueron<span class="negrita"> abogados, </span>y de ah&iacute; el nombre de<span class="negrita"> presidentes juristas.</span></p>
+		<p class="cabecera2">
+			Periodo de los presidentes militares (1605-1719)</p>
 		<p class="normal">
-			El Virreinato de la Nueva Granada qued&oacute; conformado por la fusi&oacute;n de las reales audiencias de Santa Fe, Quito y la Capitan&iacute;a General de Venezuela. Ocup&oacute; un inmenso territorio formado por la Nueva Granada, capital Santa Fe, y 24 provincias.</p>
+			A <span class="negrita">comienzos del siglo XVII</span> a Espa&ntilde;a le era dif&iacute;cil <span class="negrita">defender a sus colonias </span>de las posibles<span class="negrita"> invasiones holandesas, francesas e inglesas</span>, pues no ten&iacute;a un ej&eacute;rcito suficiente para esta labor. Por esto busc&oacute; fortificar los puertos en el Caribe y aumentar la protecci&oacute;n de las flotas comerciales.</p>
 		<p class="normal">
-			La provincia se dividi&oacute; m&aacute;s tarde en cantones correspondientes a circunscripciones electorales; a su vez, estos se compon&iacute;an por parroquias, territorios con feligres&iacute;a bajo la autoridad de un p&aacute;rroco&rdquo;.</p>
-		<p class="normal">
-			(http://www.dane.gov.co/files/investigaciones/divipola/divipola2007.pdf )</p>
+			<br />
+			En el marco de esta coyuntura, el Consejo de Indias consider&oacute; que <span class="negrita">la presidencia de juristas no era conveniente para la Real Audiencia de Santaf&eacute;</span>, porque su capital, Santaf&eacute; (hoy Bogot&aacute;), estaba muy lejos de la sede del Virreinato del Per&uacute;, Lima, pero tambi&eacute;n de los puertos del Caribe. Por esto&nbsp;<span class="negrita">dispuso, en 1605, que los presidentes fueran militares</span>. Estos recibieron el t&iacute;tulo de capitanes generales del Nuevo Reino de Granada.</p>
+		<p class="cabecera2">
+			Primer periodo como virreinato (1717-1724)</p>
+		<p>
+			<span style="line-height: 1em;">A comienzos del<span class="negrita"> siglo XVIII Espa&ntilde;a protagoniz&oacute; una guerra por la sucesi&oacute;n al trono</span> (1701-1713). <span class="negrita">Carlos II </span>&ndash;de la Casa de los Habsburgo&ndash; dej&oacute; escrito en su testamento que<span class="negrita"> conced&iacute;a la Corona de Espa&ntilde;a a Felipe de Anjou</span>, nieto del rey Luis de XIV de Francia, y perteneciente a una<span class="negrita"> </span>dinast&iacute;a distinta:<span class="negrita"> los borbones</span>.</span></p>
+		<p>
+			La Guerra de Sucesi&oacute;n termin&oacute; con la firma del Tratado de Utrecht en 1713, con el cual Felipe de Anjou o Felipe V fue coronado rey, lo que cambi&oacute; la casa de gobierno espa&ntilde;ola. Este cambio llev&oacute; a que en Espa&ntilde;a<span class="negrita"> se dieran importantes reformas</span>, que no se limitaron solo a las que emprendi&oacute; Felipe V, sino que continuaron realiz&aacute;ndose durante el reinado de Carlos III (1759-1788). Estas reformas se conocen con el nombre de <span class="negrita">Reformas Borb&oacute;nicas</span>.</p>
+		<p>
+			Un<span class="negrita">&nbsp;aspecto</span><span class="negrita">&nbsp;vital para los borbones era la centralizaci&oacute;n del poder </span>tanto en la Pen&iacute;nsula como en las colonias,<span class="negrita"> </span>con el fin de<span class="negrita"> controlar </span>realmente lo que pasaba en ellas. Para lograrlo hicieron que la divisi&oacute;n pol&iacute;tico-administrativa estuviese fraccionada en territorios m&aacute;s peque&ntilde;os. Por esta raz&oacute;n,&nbsp;<span class="negrita">en 1719 parte del virreinato del Per&uacute; se convirti&oacute; en el Virreinato de la Nueva Granada.</span></p>
+		<p>
+			<span class="negrita">La vida del virreinato fue breve</span> (1719-1723). Las causas fueron b&aacute;sicamente dos: primero, su <span class="negrita">incapacidad para sostenerse econ&oacute;micamente</span>, y segundo, <span class="negrita">el desgaste que signific&oacute; la confrontaci&oacute;n de Cartagena con Santaf&eacute; por ser la capital del virreinato</span>.&nbsp;<span style="line-height: 1em; font-size: 1em;">El Virreinato de la Nueva Granada se disolvi&oacute; en 1723 y el poder pol&iacute;tico retorn&oacute; al r&eacute;gimen de presidentes durante veinte a&ntilde;os.</span></p>
 	</body>
 </html>
