--- a/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso010/Profesor.html
+++ b/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso010/Profesor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html hola_ext_inject="disabled" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title></title>
 		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
@@ -16,24 +16,34 @@
 		<p class="cabecera2">
 			Antes de la presentaci&oacute;n</p>
 		<p class="normal">
-			Formule a los estudiantes preguntas que le permita evaluar los conocimientos previos que tienen sobre el tema. Podr&iacute;a comenzar preguntando:</p>
+			Formule a los estudiantes preguntas que le permitan evaluar los conocimientos previos que tienen sobre el tema. Podr&iacute;a comenzar preguntando:</p>
 		<p class="tab1">
-			1. &iquest;Qu&eacute; se entiende por una divisi&oacute;n pol&iacute;tico administrativa?&nbsp;</p>
+			1. &iquest;Qu&eacute; se entiende por una divisi&oacute;n pol&iacute;tico-administrativa?&nbsp;</p>
 		<p class="tab1">
-			2. &iquest;Cu&aacute;l es la divisi&oacute;n pol&iacute;tico administrativa que tiene Colombia hoy?</p>
+			2. &iquest;Cu&aacute;l es la divisi&oacute;n pol&iacute;tico-administrativa que tiene hoy Colombia?</p>
 		<p class="tab1">
-			3. &iquest;Por qu&eacute; durante la Colonia fue importante ir &quot;puliendo&quot; esa divisi&oacute;n&quot;?</p>
+			3. &iquest;Por qu&eacute; durante la Colonia fue importante ir &quot;puliendo&quot; esa divisi&oacute;n?</p>
 		<p class="tab1">
 			4. &iquest;Cu&aacute;l era la divisi&oacute;n pol&iacute;tico-administrativa colonial?</p>
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p class="normal">
-			Una vez visto el interactivo, adem&aacute;s de recuperar alguna de estas preguntas, pida a los estudiantes que hagan un cuadro resumen con las principales ideas expuestas. Esto le permitir&aacute; confirmar si han comprendido. P&iacute;dales que:</p>
+			Una vez visto el interactivo, adem&aacute;s de recuperar alguna de estas preguntas, pida a los estudiantes que formen grupos m&aacute;ximo de tres personas, con el fin de emprender una investigaci&oacute;n sobre:</p>
 		<p class="tab1">
-			- Listen los conceptos principales.</p>
+			1. &iquest;Cu&aacute;les fueron las tareas de los gobernadores?</p>
 		<p class="tab1">
-			- Jerarquicen la informaci&oacute;n.</p>
+			2. &iquest;En qu&eacute; radicaba el incumplimiento de los gobernantes con relaci&oacute;n a las leyes establecidas por la Corona espa&ntilde;ola?</p>
 		<p class="tab1">
-			- Establezcan las relaciones entre los diferentes conceptos.</p>
+			3. &iquest;Qui&eacute;nes fueron los virreyes que gobernaron en los dos momentos del Virreinato de la Nueva Granada? Analicen:&nbsp;</p>
+		<p class="tab2">
+			- el tiempo que dur&oacute; su gobierno,</p>
+		<p class="tab2">
+			- los aciertos y desaciertos de su gesti&oacute;n,</p>
+		<p class="tab2">
+			- su relaci&oacute;n con la Corona y con la poblaci&oacute;n neogranadina.</p>
+		<p>
+			Para responder estas preguntas, s&iacute;rvase de la siguiente p&aacute;gina para ampliar los contenidos aqu&iacute; propuestos [<a href="http://www.dane.gov.co/files/investigaciones/divipola/divipola2007.pdf " target="_blank">VER</a>].</p>
+		<p>
+			Hecha la investigaci&oacute;n, organice una mesa redonda en la que los grupos compartan la informaci&oacute;n y juntos formulen las conclusiones, que pueden escribir en sus cuadernos de apuntes de clase.</p>
 	</body>
 </html>
