--- a/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso070/Profesor.html
+++ b/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso070/Profesor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html hola_ext_inject="disabled" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title></title>
 		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
@@ -18,22 +18,38 @@
 		<p class="normal">
 			Formule a los estudiantes preguntas que le permita evaluar sus conocimientos previos sobre el tema. Podr&iacute;a proponerles que hablen sobre:</p>
 		<p class="tab1">
-			1. &iquest;Qu&eacute; entienden por resguardo?</p>
+			<span style="font-size: 1em; line-height: 1em;">- &iquest;Se puede pensar en un dominio colonial que no implique la b&uacute;squeda del poder econ&oacute;mico?</span></p>
 		<p class="tab1">
-			2. &iquest;Hay alg&uacute;n tipo de relaci&oacute;n entre el resguardo, la encomienda y la mita?</p>
+			- &iquest;La explotaci&oacute;n de metales y piedras preciosas podr&iacute;a haber generado cambios en las formas de vidas de la poblaci&oacute;n ind&iacute;gena que habitaba este territorio?</p>
 		<p class="tab1">
-			3. &iquest;Alguna de estas formas de organizaci&oacute;n ind&iacute;gena tiene origen medieval?</p>
+			- &iquest;Era necesario evangelizar a los ind&iacute;genas a fin de obtener mayores rendimientos econ&oacute;micos?</p>
 		<p class="tab1">
-			4. &iquest;Por qu&eacute; era importante organizar el trabajo de las comunidades ind&iacute;genas o de sus individuos?</p>
+			<span style="font-size: 1em; line-height: 1em;">- &iquest;Hay alg&uacute;n tipo de relaci&oacute;n entre el resguardo, la encomienda y la mita?</span></p>
+		<p class="tab1">
+			<span style="font-size: 1em; line-height: 1em;">-&nbsp;</span><span style="line-height: 1em; font-size: 1em;">&iquest;Hay hoy en Colombia resguardos?</span></p>
+		<p class="tab1">
+			<span style="line-height: 1em; font-size: 1em;">-&nbsp;</span><span style="line-height: 1em; font-size: 1em;">&iquest;Alguna de estas formas de organizaci&oacute;n ind&iacute;gena tiene origen medieval?</span></p>
+		<p class="tab1">
+			<span style="line-height: 1em; font-size: 1em;">-&nbsp;</span><span style="line-height: 1em; font-size: 1em;">&iquest;Por qu&eacute; era importante organizar el trabajo de las comunidades ind&iacute;genas o de sus individuos?</span></p>
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p class="normal">
-			Una vez visto el interactivo, adem&aacute;s de recuperar alguna de estas preguntas, pida a los estudiantes que hagan un cuadro resumen con las principales ideas expuestas. Esto le permitir&aacute; confirmar si han comprendido. P&iacute;dales que:</p>
+			Una vez visto el interactivo p&iacute;dale a los estudiantes que se organicen en grupos para discutir e investigar sobre una de las siguientes preguntas:</p>
+		<p class="normal">
+			1. La importaci&oacute;n de animales de granja evidentemente cambi&oacute; el uso de la tierra en el Nuevo Mundo, pero &iquest;qu&eacute; otras consecuencias supuso la presencia de estas especies?</p>
+		<p class="normal">
+			2. El talento de muchas de las comunidades ind&iacute;genas del Nuevo Reino de Granada en el trabajo de la orfebrer&iacute;a es evidente, y seguramente tambi&eacute;n lo fue para los espa&ntilde;oles. &iquest;Qu&eacute; razones tendr&iacute;an estos para prescindir de esos conocimientos de la poblaci&oacute;n nativa, al punto que se los excluy&oacute; de los talleres coloniales?</p>
+		<p class="normal">
+			3. Las comunidades ind&iacute;genas precolombinas del Nuevo Mundo desarrollaron t&eacute;cnicas de cultivo muy provechosas por cientos de a&ntilde;os. Ahora bien, &iquest;los espa&ntilde;oles trajeron consigo m&eacute;todos y herramientas propios que mejoraron la manera de cultivar en Am&eacute;rica?</p>
+		<p class="normal">
+			4. Las misiones o reducciones jesuitas fueron muy importantes en distintas regiones del Nuevo Mundo: Bolivia, Paraguay, Per&uacute;, Colombia.</p>
 		<p class="tab1">
-			- Listen los conceptos principales.</p>
+			- &iquest;Cu&aacute;les fueron los principios en los que se fundamentaba su labor?</p>
 		<p class="tab1">
-			- Jerarquicen la informaci&oacute;n.</p>
+			- &iquest;En qu&eacute; radicaba el &eacute;xito de su propuesta?</p>
 		<p class="tab1">
-			- Establezcan las relaciones entre los diferentes conceptos.</p>
+			- &iquest;Qu&eacute; dejaron&nbsp;en aquellos lugares donde se asentaron?</p>
+		<p class="normal">
+			Dele a los grupos suficiente tiempo para hacer la investigaci&oacute;n. Sugi&eacute;rales p&aacute;ginas web donde puedan hallar informaci&oacute;n confiable, interesante y acad&eacute;mica. Terminado el trabajo de b&uacute;squeda, p&iacute;dale a los grupos que escriban un informe en el que respondan la o las preguntas que orientaron sus pesquisas. Luego organice un tiempo para que los estudiantes expongan a la clase lo que aprendieron sobre el tema en que trabajaron.</p>
 	</body>
 </html>
