--- a/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso070/Alumno.html
+++ b/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso070/Alumno.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html hola_ext_inject="disabled" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title></title>
 		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
@@ -7,37 +7,65 @@
 		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
+		<p class="cabecera1">
+			<span style="font-size: 1em; line-height: 1em;">La econom&iacute;a colonial</span></p>
+		<p>
+			Durante los siglos XVI y XVII la<span class="negrita"> econom&iacute;a de las potencias coloniales estuvo enfocada en los principios del mercantilismo</span>. La acumulaci&oacute;n de metales preciosos servir&iacute;a para generar imperios con gran capacidad de inversi&oacute;n y poder militar para disuadir o defender sus territorios ultramarinos. La <span class="negrita">explotaci&oacute;n de las materias</span> primas en los territorios coloniales provoc&oacute; la concentraci&oacute;n de otras actividades econ&oacute;micas que giraban y se interrelacionaban con los centros mineros.</p>
+		<p class="cabecera3">
+			La miner&iacute;a</p>
+		<p>
+			Esta actividad, al inicio de la intervenci&oacute;n espa&ntilde;ola en Am&eacute;rica, se configur&oacute; como la <span class="negrita">principal actividad econ&oacute;mica</span>. Esto se explica por las motivaciones iniciales de la exploraci&oacute;n atl&aacute;ntica, motivada por la b&uacute;squeda de metales preciosos, especialmente oro.</p>
+		<p class="normal">
+			La importancia del metal precioso se puede ilustrar en datos puntuales sobre las remesas de Am&eacute;rica hacia Espa&ntilde;a. En 1503 y 1660 llegaron al puerto de Sanl&uacute;car de Barrameda 185 000 kilos de oro y 16 millones de kilos de plata.<span class="negrita"> La plata</span>, con mucho, <span class="negrita">representaba un inmenso porcentaje de las exportaciones de Am&eacute;rica</span> hacia Espa&ntilde;a. El costo de esta riqueza se midi&oacute; en millones de vidas de ind&iacute;genas sometidos al trabajo forzado en las minas.</p>
+		<p>
+			Las zonas productoras del metal ten&iacute;an conexi&oacute;n directa con la metr&oacute;poli, debido a lo apremiante del curso del metal hacia Europa, con el fin de financiar los escenarios pol&iacute;ticos y militares de Espa&ntilde;a. La instituci&oacute;n de la <span class="negrita">encomienda</span> suministr&oacute;, inicialmente, la <span class="negrita">mano de obra necesaria para el beneficio de las minas</span>. Los distritos mineros depend&iacute;an de los centros urbanos para su abastecimiento, lo que gener&oacute; una gran actividad econ&oacute;mica, que luego se disip&oacute; cuando la producci&oacute;n disminuy&oacute; en forma irremediable.</p>
+		<p class="cabecera3">
+			La agricultura</p>
+		<p>
+			El <span class="negrita">acceso a la tierra y su control</span> por parte de los espa&ntilde;oles se registr&oacute; a trav&eacute;s de dos mecanismos: la <span class="negrita">apropiaci&oacute;n de hecho o derecho</span> y la <span class="negrita">presi&oacute;n de las circunstancias econ&oacute;micas que motivaron la apropiaci&oacute;n</span>.</p>
+		<p class="normal">
+			El acceso a la tierra, en primera instancia, se dio por la fuerza misma de la conquista y los privilegios otorgados a los conquistadores y sus huestes. La Corona, como una forma de control e instauraci&oacute;n de un gobierno, implement&oacute; las <span class="negrita">mercedes de tierras</span>, ya que los territorios fueron considerados patrimonio de la Corona, por tanto, solo esta podr&iacute;a garantizar y sancionar su control. Las tierras concedidas pasaban al beneficiario siempre y cuando este la poblara y explotara sus recursos en agricultura o ganader&iacute;a.</p>
+		<p>
+			Las <span class="negrita">comunidades religiosas</span> tuvieron acceso a la tierra y se convirtieron en grandes propietarios. La <span class="negrita">comunidad de los jesuitas</span> se destac&oacute; por su gran <span class="negrita">organizaci&oacute;n y efectividad en la producci&oacute;n de bienes agr&iacute;colas, ganaderos y manufacturas</span>. Sus productos abastec&iacute;an a los colegios y comunidades ubicadas en los centros urbanos, adem&aacute;s se lucraban con los excedentes vendidos a los particulares. Estas ganancias suministraron liquidez a las disciplinadas comunidades jesuitas, que las invirtieron en la miner&iacute;a y el comercio.</p>
+		<p class="normal">
+			La <span class="negrita">mano de obra, durante los siglos XVII y XVIII, fue mayoritariamente ind&iacute;gena</span>, movilizada por medio de las figuras del concierto (trabajadores permanentes) y el alquiler (trabajadores temporales o de estaci&oacute;n). En otras zonas se implement&oacute; la hacienda tipo plantaci&oacute;n para <span class="negrita">el cultivo de ca&ntilde;a, all&iacute; predomin&oacute; la mano de obra esclava de origen africano</span>.</p>
 		<p class="cabecera2">
-			El trabajo ind&iacute;gena en el Nuevo Reino de Granada</p>
+			El trabajo ind&iacute;gena</p>
 		<p class="normal">
-			El sistema colonial y su econom&iacute;a se basaron, en principio, en el trabajo de las comunidades ind&iacute;genas y luego en el de la poblaci&oacute;n africana que lleg&oacute;, al Nuevo Reino de Granada y al resto del Nuevo Mundo, como mano de obra esclava.</p>
+			El <span class="negrita">sistema colonial y su econom&iacute;a se basaron</span>, en principio, <span class="negrita">en el trabajo de las comunidades ind&iacute;genas</span> y <span class="negrita">luego en el de la poblaci&oacute;n africana</span> que lleg&oacute; al Nuevo Reino de Granada y al resto del Nuevo Mundo, como mano de obra esclava.</p>
+		<p>
+			A medida que la conquista avanzaba, el n&uacute;mero de la poblaci&oacute;n nativa fue disminuyendo significativamente a causa, primero, de la proliferaci&oacute;n de nuevas bacterias y virus para los que sus sistemas inmunes no estaban preparados. Segundo, por los excesos y los atropellos de los conquistadores. Esta situaci&oacute;n hizo que la Corona se alarmara y decidiera intervenir en las relaciones entre espa&ntilde;oles e ind&iacute;genas, creando <span class="negrita">reglas e instituciones para proteger a los nativos</span>, pero que al mismo tiempo permitieran a la Corona y a los espa&ntilde;oles beneficiarse con su trabajo y tributo.</p>
+		<p class="cabecera3">
+			Los repartimientos de indios</p>
+		<p>
+			<span class="negrita">La Corona</span> nunca financi&oacute; ni los viajes de Col&oacute;n ni, posteriormente, el proceso de Conquista, pero s&iacute;<span class="negrita"> se benefici&oacute; mucho con las ganancias de esta empresa</span>, de tal forma que le dio legitimidad y orden a lo que acontec&iacute;a en el Nuevo Mundo, adem&aacute;s recompens&oacute; a los conquistadores por su osad&iacute;a. Un modo de hacerlo fue <span class="negrita">autorizando los repartimientos de indios con el fin de que estos trabajaran para los conquistadores</span> en labores agr&iacute;colas y mineras, pero paralelamente fue un modo de asegurarse ganancias sobre aquello, aunque al principio estas no fueron en la cantidad que la Corona esperaba, no porque los ind&iacute;genas no trabajaran duro, sino porque los conquistadores no cumpl&iacute;an con el pago del quinto real o de otros impuestos creados por Espa&ntilde;a.</p>
 		<p class="normal">
-			A medida que la conquista avanzaba, el n&uacute;mero de poblaci&oacute;n nativa fue disminuyendo significativamente a causa, primero, de la proliferaci&oacute;n de nuevas bacterias y virus para los que sus sistemas inmunes no estaban preparados. Segundo, por los excesos y los atropellos de los conquistadores. Esta situaci&oacute;n hizo que la Corona se alarmara y decidiera intervenir en las relaciones entre espa&ntilde;oles e ind&iacute;genas, creando reglas e instituciones que protegieran a los nativos, pero que al mismo tiempo permitieran a la Corona y a los espa&ntilde;oles beneficiarse con su trabajo y tributo.</p>
+			Seg&uacute;n lo que establecieron las reales c&eacute;dulas del 21 de abril de 1574 y 24 de noviembre de 1601, <span class="negrita">el repartimiento de indios fue un sistema a trav&eacute;s del cual a un espa&ntilde;ol se le adjudicaba mano de obra ind&iacute;gena para realizar trabajos agr&iacute;colas o dom&eacute;sticos</span>. Los ind&iacute;genas, por su parte, recib&iacute;an un estipendio m&iacute;nimo por su labor, que no se extend&iacute;a m&aacute;s all&aacute; de una semana completa o un mes, despu&eacute;s de ese tiempo regresaban a sus resguardos y eran sustituidos por otros.&nbsp;</p>
+		<p>
+			Este sistema se basaba en tres principios: <span class="negrita">sujeci&oacute;n sobre los ind&iacute;genas</span>, <span class="negrita">rotaci&oacute;n semanal o mensual</span>, y r<span class="negrita">emuneraci&oacute;n exigua y obligatoria</span>.</p>
+		<p class="normal">
+			Los atropellos contra estos trabajadores fueron tantos, que en 1601 se elabor&oacute; un reglamento que disminu&iacute;a los abusos. En 1609 el repartimiento de indios qued&oacute; limitado a algunos trabajos.</p>
 		<p class="cabecera3">
 			El resguardo</p>
 		<p class="normal">
-			Para la historiadora Margarita Gonz&aacute;lez (El resguardo en el Nuevo Reino de Granada), al resguardo se lo &ldquo;concibe precisamente como la <span class="negrita">instituci&oacute;n que reglamenta la vida de la comunidad ind&iacute;gena</span> a la par que formaliza y viabiliza su integraci&oacute;n a los menesteres del establecimiento colonial [&hellip;]. Es, de un lado, la instauraci&oacute;n de unas relaciones b&aacute;sicas entre el Estado y la comunidad ind&iacute;gena, y de otro, el <span class="negrita">otorgamiento</span> a los ind&iacute;genas de un conjunto de <span class="negrita">condiciones econ&oacute;micas y jur&iacute;dicas</span> que les permit&iacute;an llevar una vida sedentaria relativamente independiente y autosuficiente; en este &uacute;ltimo sentido el resguardo obraba como un factor discriminador y segregacionista que buscaba proteger a los ind&iacute;genas de las influencias exteriores, particularmente de los grupos blancos, mestizos y negros, con lo cual se cre&iacute;a conservar a los ind&iacute;genas en condiciones favorables para el trabajo y la tributaci&oacute;n al r&eacute;gimen colonial&rdquo; (1979).</p>
+			Instaurado durante el siglos XVII, consisti&oacute; en la <span class="negrita">asignaci&oacute;n de tierras a una comunidad ind&iacute;gena</span>, la cual controlaba el terreno como propiedad comunal e inalienable.</p>
+		<p>
+			El objetivo de esta instituci&oacute;n fue <span class="negrita">concentrar la poblaci&oacute;n ind&iacute;gena y garantizar su supervivencia</span>, as&iacute; como su utilizaci&oacute;n como mano de obra y, por extensi&oacute;n, la continuidad en sus obligaciones tributarias con la Corona, ya que los ind&iacute;genas ten&iacute;an la calidad de s&uacute;bditos de la monarqu&iacute;a espa&ntilde;ola.</p>
 		<p class="normal">
-			En un resguardo la comunidad <span class="negrita">trabajaba</span> entonces <span class="negrita">para s&iacute;</span>, ya fuera en sus parcelas familiares o en las tierras comunitarias que le permitir&iacute;an pagar los tributos. Pero tambi&eacute;n el resguardo deb&iacute;a cumplir con <span class="negrita">trabajos afuera</span>, que le obligaban ceder, por cierto tiempo, a individuos de su comunidad para cumplir con la mita minera o agraria, seg&uacute;n las actividades econ&oacute;micas de la regi&oacute;n donde estuviese ubicado el resguardo; as&iacute; que en muchas regiones del Nuevo Reino de Granada&nbsp; los resguardos eran los que proporcionaban la mano de obra para las minas o para las haciendas.</p>
-		<p class="normal">
-			Pero con el paso del tiempo el resguardo experiment&oacute; grandes cambios originados por &ldquo;la disminuci&oacute;n de la poblaci&oacute;n ind&iacute;gena; la pol&iacute;tica de agregaci&oacute;n de pueblos, el arrendamiento que de las tierras de resguardo hac&iacute;an los ind&iacute;genas con la consecuente penetraci&oacute;n de la poblaci&oacute;n blanca y mestiza en el &aacute;rea ind&iacute;gena; el desarrollo del mestizaje y los efectos que supuso la ampliaci&oacute;n del dominio de las haciendas que asimilan la fuerza de trabajo sujet&aacute;ndola a su espacio territorial y expandiendo este a costa de la tierra ind&iacute;gena. Todo lo cual se expresar&aacute; en el abandono, por parte de la Corona, de la pol&iacute;tica proteccionista del ind&iacute;gena en nombre del desarrollo de la hacienda&rdquo; (Gonz&aacute;lez: 1979).</p>
-		<p class="cabecera3">
-			Los repartimientos de indios</p>
-		<p class="normal">
-			La Corona nunca financi&oacute; ni los viajes de Col&oacute;n ni, posteriormente, el proceso de Conquista, pero s&iacute; era ella la que se beneficiaba con mucho de las ganancias de esta empresa, de tal forma que no ten&iacute;a m&aacute;s que darle legitimidad y orden a lo que acontec&iacute;a en el Nuevo Mundo, y recompensar a los conquistadores por su osad&iacute;a. Un modo de hacerlo fue autorizando los repartimientos de indios con el fin de que estos trabajaran para los conquistadores en labores agr&iacute;colas y mineras, pero&nbsp; paralelamente fue un modo de asegurarse ganancias sobre aquello, aunque al principio estas no fueron en la cantidad que la Corona esperaba, no porque los ind&iacute;genas no trabajaran duro, sino porque los conquistadores no cumpl&iacute;an con el pago del quinto real o de otros impuestos creados por Espa&ntilde;a.</p>
-		<p class="normal">
-			Seg&uacute;n lo que establecieron las reales c&eacute;dulas del 21 de abril de 1574 y 24 de noviembre de 1601, el repartimiento de indios era un sistema a trav&eacute;s del cual a un espa&ntilde;ol se le <span class="negrita">adjudicaba mano de obra ind&iacute;gena</span> para desempe&ntilde;arse en <span class="negrita">trabajos agr&iacute;colas o dom&eacute;sticos</span>. Los ind&iacute;genas, por su parte, recib&iacute;an un estipendio m&iacute;nimo por su labor que no se extend&iacute;a m&aacute;s all&aacute; de una semana completa o un mes, despu&eacute;s de ese tiempo estos regresaba a sus resguardos y eran sustituidos por otros que hab&iacute;an sido entregados en repartimiento.</p>
-		<p class="normal">
-			Este sistema se basaba en tres principios: sujeci&oacute;n sobre los ind&iacute;genas, rotaci&oacute;n semanal o mensual, y remuneraci&oacute;n exigua y obligatoria.</p>
-		<p class="normal">
-			Ahora bien, los atropellos contra estos trabajadores eran tantos que en 1601 se elabor&oacute; un reglamento que intentaba disminuir los abusos. En 1609 el repartimiento de indios qued&oacute; limitado a algunos trabajos.</p>
+			El resguardo <span class="negrita">organiz&oacute; la tierra en sectores</span>: uno compuesto por las parcelas familiares, otra parte se destin&oacute; al trabajo comunitario con el fin de aportar el tributo correspondiente y, finalmente, un porci&oacute;n de car&aacute;cter comunal para el pastoreo de los ganados.</p>
+		<p>
+			Las tierras de los resguardos fueron objeto de presi&oacute;n y despojo por parte de espa&ntilde;oles, criollos y mestizos que buscaban expandir sus tenencias a costa de las tierras del resguardo. Tal situaci&oacute;n se prolong&oacute; hasta mediados del siglo XIX, cuando los resguardos fueron liquidados y repartidos entre los miembros de la comunidad.</p>
 		<p class="cabecera3">
 			La encomienda</p>
-		<p class="normal">
-			Entre los siglos XVI y XVII la encomienda <span class="negrita">regul&oacute; la fuerza de trabajo</span> y la <span class="negrita">distribuci&oacute;n de la mano de obra ind&iacute;gena</span>. En concreto, la encomienda era una instituci&oacute;n a trav&eacute;s de la cual la Corona le encomendaba a un espa&ntilde;ol cierto n&uacute;mero de ind&iacute;genas para que aquel se aprovechara de su trabajo y de los tributos que deb&iacute;an pagarle. A cambio, el espa&ntilde;ol ten&iacute;a la obligaci&oacute;n de garantizar la evangelizaci&oacute;n de estos. Es importante anotar que la encomienda no implicaba la propiedad del encomendero sobre los ind&iacute;genas, as&iacute; que cuando este mor&iacute;a la encomienda regresaba a la Corona, que pod&iacute;a entregarla a un nuevo encomendero.</p>
+		<p>
+			Entre los siglos XVI y XVII <span class="negrita">la encomienda regul&oacute; la fuerza de trabajo y la distribuci&oacute;n de la mano de obra ind&iacute;gena</span>. En concreto, la encomienda fue una instituci&oacute;n a trav&eacute;s de la cual la Corona le encomendaba a un espa&ntilde;ol cierto n&uacute;mero de ind&iacute;genas para que aquel se <span class="negrita">aprovechara de su trabajo y de los tributos que deb&iacute;an pagarle.</span> A cambio, el espa&ntilde;ol ten&iacute;a la obligaci&oacute;n de <span class="negrita">garantizarles su evangelizaci&oacute;n</span>. Es importante anotar que la encomienda no implicaba la propiedad del encomendero sobre los ind&iacute;genas, as&iacute; que cuando este mor&iacute;a la encomienda regresaba a la Corona, que pod&iacute;a entregarla a un nuevo encomendero.</p>
 		<p class="cabecera3">
 			La mita</p>
+		<p>
+			Fue la figura que legaliz&oacute; el trabajo ind&iacute;gena en actividades agr&iacute;colas a cambio de un salario.<span class="negrita"> Esta instituci&oacute;n ten&iacute;a antecedentes precolombinos en el Imperio inca y las comunidades muiscas</span>.</p>
 		<p class="normal">
-			La mita fue una instituci&oacute;n que los espa&ntilde;oles adoptaron de las tradiciones ind&iacute;genas andinas. Cada comunidad ind&iacute;gena ten&iacute;a la obligaci&oacute;n de <span class="negrita">asignar</span> a un n&uacute;mero de su <span class="negrita">poblaci&oacute;n, para trabajar durante cierto tiempo</span> en aquellas minas que se les asignaran.</p>
+			La figura de la mita se diversific&oacute;, con el fin de aprovechar al m&aacute;ximo la mano de obra ind&iacute;gena, siendo utilizada en <span class="negrita">actividades mineras, mita minera, en los obrajes, f&aacute;bricas de tejidos y pa&ntilde;os</span>.</p>
+		<p>
+			La mita intensific&oacute; el uso excesivo de la mano de obra y promovi&oacute; el desarraigo de las comunidades, ya que ten&iacute;an que desplazarse a grandes distancias de su lugar de origen y permanecer meses fuera de sus tierras y resguardos.</p>
 	</body>
 </html>
