--- a/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso070/Principal.html
+++ b/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso070/Principal.html
@@ -15,7 +15,7 @@
 		************************************************************************-->
     
     
-    <title>El trabajo indígena en el Nuevo Reino de Granada</title>
+    <title>La economía en el Nuevo Reino de Granada</title>
 
     <!-- Preloader -->
 	<script src="lib/ppppreloader/1_0/ppppreloader_min.js" type="text/javascript"></script>
