--- a/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso190/Principal.html
+++ b/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso190/Principal.html
@@ -10,7 +10,7 @@
 				VERSION: 15.11.5.1
 	-->
 	
-	<title>Proyecto: estudio de la condición de la mujer en el Nuevo Reino de Granada</title>
+	<title>Proyecto: estudio de la condición de la mujer en la Nueva Granada</title>
 	
 	<!--<script type="text/javascript" src="extlib/jquery/1_11_1/jquery_1_11_1_min.js"></script>
 	<script type="text/javascript" src="extlib/jquery_form/20130711/jquery_form_min.js"></script>
