--- a/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso010/Alumno.html
+++ b/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso010/Alumno.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<p class="cabecera1">
-			Etapas de la evoluci&oacute;n pol&iacute;tico-administrativa en el Nuevo Reino de Granada</p>
+			Evoluci&oacute;n pol&iacute;tico-administrativa en la Nueva Granada</p>
 		<p class="cabecera2">
 			Las primeras gobernaciones</p>
 		<p class="normal">
@@ -27,7 +27,7 @@
 			El 12 de abril de 1550 la Corona instal&oacute; la<span class="negrita"> Real Audiencia de Santaf&eacute;</span> con el fin de <span class="negrita">administrar justicia y proteger a los ind&iacute;genas</span>. Esta Audiencia tuvo jurisdicci&oacute;n sobre las gobernaciones de Santa Marta y Cartagena, y sobre el Nuevo Reino de Granada. Antes de esa fecha las gobernaciones de Popay&aacute;n y Cartagena depend&iacute;an de la Audiencia de Panam&aacute;, establecida en 1538, y Santa Marta, de la Audiencia de Santo Domingo (1511), la primera creada en Am&eacute;rica.</p>
 		<p class="normal">
 			Sus <span class="negrita">funciones</span> eran varias:&nbsp;<span class="negrita">crear leyes que protegieran a la poblaci&oacute;n nativa, hacer visitas judiciales y de control al territorio de los gobernadores, y desarrollar y poner en funcionamiento pol&iacute;ticas de expansi&oacute;n y poblamiento</span> a trav&eacute;s de la fundaci&oacute;n de ciudades y de la creaci&oacute;n de centros mineros.</p>
-		<p>
+		<p class="cabecera2">
 			<span style="font-size: 20px; line-height: 1em;">Periodo de los presidentes letrados (1564-1605)</span></p>
 		<p class="normal">
 			A medida que crec&iacute;a el n&uacute;mero de pobladores tambi&eacute;n aumentaban los problemas, por lo que la Real Audiencia termin&oacute; siendo ineficaz. <span class="negrita">La Corona decidi&oacute; limitar sus tareas al plano jur&iacute;dico</span>, y nombr&oacute; un presidente de la Real Audiencia, quien ten&iacute;a funciones civiles y militares para gobernar, y pod&iacute;a hacerlo con independencia del virrey del Per&uacute;, aun cuando se formaba parte de ese virreinato.<br />
