--- a/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso010/Profesor.html
+++ b/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso010/Profesor.html
@@ -10,7 +10,7 @@
 		<p class="cabecera1">
 			Objetivo</p>
 		<p class="normal">
-			El interactivo permite mostrar a los estudiantes las distintas formas de administraci&oacute;n y poder impuestas por Espa&ntilde;a en la Nueva Granada.</p>
+			El prop&oacute;sito del interactivo es que los estudiantes comprendan la manera como Espa&ntilde;a organiz&oacute; el gobierno de sus colonias en la Nueva Granada.</p>
 		<p class="cabecera1">
 			Propuesta</p>
 		<p class="cabecera2">
