--- a/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso070/Profesor.html
+++ b/fuentes/visuales/grado07/guion06/guionAbierto/CS_07_06_CO_Recurso070/Profesor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html hola_ext_inject="disabled" xmlns="http://www.w3.org/1999/xhtml">
+<html hola_ext_inject="inited" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title></title>
 		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
@@ -10,37 +10,37 @@
 		<p class="cabecera1">
 			Objetivo</p>
 		<p class="normal">
-			El interactivo permite explicar a los estudiantes las distintas formas del trabajo ind&iacute;gena en el Nuevo Reino de Granada durante la Colonia.</p>
+			El interactivo permite explicar a los estudiantes las distintas formas de explotaci&oacute;n econ&oacute;mica en el Nuevo Reino de Granada.</p>
 		<p class="cabecera1">
 			Propuesta</p>
 		<p class="cabecera2">
 			Antes de la presentaci&oacute;n</p>
 		<p class="normal">
-			Formule a los estudiantes preguntas que le permita evaluar sus conocimientos previos sobre el tema. Podr&iacute;a proponerles que hablen sobre:</p>
+			Formule a los estudiantes preguntas que le permitan evaluar sus conocimientos previos del tema. Podr&iacute;a proponerles que resuelvan las sigientes preguntas:</p>
 		<p class="tab1">
-			<span style="font-size: 1em; line-height: 1em;">- &iquest;Se puede pensar en un dominio colonial que no implique la b&uacute;squeda del poder econ&oacute;mico?</span></p>
+			<span style="font-size: 1em; line-height: 1em;">- &iquest;Por qu&eacute; para Espa&ntilde;a era importante establecer colonias en Am&eacute;rica? &iquest;C&oacute;mo se beneficiaba?&nbsp;</span></p>
 		<p class="tab1">
-			- &iquest;La explotaci&oacute;n de metales y piedras preciosas podr&iacute;a haber generado cambios en las formas de vidas de la poblaci&oacute;n ind&iacute;gena que habitaba este territorio?</p>
+			- &iquest;Qu&eacute; recursos econ&oacute;micos explot&oacute; Espa&ntilde;a en la Nueva Granada?</p>
 		<p class="tab1">
-			- &iquest;Era necesario evangelizar a los ind&iacute;genas a fin de obtener mayores rendimientos econ&oacute;micos?</p>
+			- &iquest;Qu&eacute; estrategias utilizaron los espa&ntilde;oles en la Nueva Granada para explotar la mano de obra ind&iacute;gena?</p>
 		<p class="tab1">
-			<span style="font-size: 1em; line-height: 1em;">- &iquest;Hay alg&uacute;n tipo de relaci&oacute;n entre el resguardo, la encomienda y la mita?</span></p>
+			<span style="font-size: 1em; line-height: 1em;">- &iquest;Qu&eacute; situaciones relacionadas con la econom&iacute;a llevaros a los espa&ntilde;oles a explotar la mano de obra esclava?</span></p>
 		<p class="tab1">
-			<span style="font-size: 1em; line-height: 1em;">-&nbsp;</span><span style="line-height: 1em; font-size: 1em;">&iquest;Hay hoy en Colombia resguardos?</span></p>
+			<span style="font-size: 1em; line-height: 1em;">-&nbsp;</span><span style="line-height: 1em; font-size: 1em;">&iquest;Por qu&eacute; los ind&iacute;genas debieron trabajar para los espa&ntilde;oles?</span></p>
 		<p class="tab1">
-			<span style="line-height: 1em; font-size: 1em;">-&nbsp;</span><span style="line-height: 1em; font-size: 1em;">&iquest;Alguna de estas formas de organizaci&oacute;n ind&iacute;gena tiene origen medieval?</span></p>
+			<span style="line-height: 1em; font-size: 1em;">-&nbsp;</span><span style="line-height: 1em; font-size: 1em;">&iquest;Qui&eacute;nes se beneficiaron y qui&eacute;nes se perjudicaron con la explotaci&oacute;n econ&oacute;mica que Espa&ntilde;a implement&oacute; en la Nueva Granada?</span></p>
 		<p class="tab1">
-			<span style="line-height: 1em; font-size: 1em;">-&nbsp;</span><span style="line-height: 1em; font-size: 1em;">&iquest;Por qu&eacute; era importante organizar el trabajo de las comunidades ind&iacute;genas o de sus individuos?</span></p>
+			<span style="line-height: 1em; font-size: 1em;">-&nbsp;</span><span style="line-height: 1em; font-size: 1em;">&iquest;Por qu&eacute; para la Corona espa&ntilde;ola era importante organizar el trabajo de las comunidades ind&iacute;genas?</span></p>
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p class="normal">
-			Una vez visto el interactivo p&iacute;dale a los estudiantes que se organicen en grupos para discutir e investigar sobre una de las siguientes preguntas:</p>
+			Una vez visto el interactivo p&iacute;dale a los estudiantes que se organicen en grupos para discutir e investigar sobre los siguientes aspectos:</p>
 		<p class="normal">
 			1. La importaci&oacute;n de animales de granja evidentemente cambi&oacute; el uso de la tierra en el Nuevo Mundo, pero &iquest;qu&eacute; otras consecuencias supuso la presencia de estas especies?</p>
 		<p class="normal">
 			2. El talento de muchas de las comunidades ind&iacute;genas del Nuevo Reino de Granada en el trabajo de la orfebrer&iacute;a es evidente, y seguramente tambi&eacute;n lo fue para los espa&ntilde;oles. &iquest;Qu&eacute; razones tendr&iacute;an estos para prescindir de esos conocimientos de la poblaci&oacute;n nativa, al punto que se los excluy&oacute; de los talleres coloniales?</p>
 		<p class="normal">
-			3. Las comunidades ind&iacute;genas precolombinas del Nuevo Mundo desarrollaron t&eacute;cnicas de cultivo muy provechosas por cientos de a&ntilde;os. Ahora bien, &iquest;los espa&ntilde;oles trajeron consigo m&eacute;todos y herramientas propios que mejoraron la manera de cultivar en Am&eacute;rica?</p>
+			3. Las comunidades ind&iacute;genas precolombinas del Nuevo Mundo desarrollaron t&eacute;cnicas de cultivo muy provechosas por cientos de a&ntilde;os. &iquest;Cu&aacute;les t&eacute;cnicas de explotaci&oacute;n agr&iacute;cola introdujeron los espa&ntilde;oles en la Nueva Granada?</p>
 		<p class="normal">
 			4. Las misiones o reducciones jesuitas fueron muy importantes en distintas regiones del Nuevo Mundo: Bolivia, Paraguay, Per&uacute;, Colombia.</p>
 		<p class="tab1">
