--- a/fuentes/visuales/grado09/guion11/guionAbierto/CS_09_11_CO_Recurso010/data/actividades/ejercicio_0_m1c_zip/Principal.html
+++ b/fuentes/visuales/grado09/guion11/guionAbierto/CS_09_11_CO_Recurso010/data/actividades/ejercicio_0_m1c_zip/Principal.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
+    <head><meta charset="iso-8859-1">
+        
         <meta http-equiv="X-UA-Compatible" content="IE=10">
         <title></title>
         <meta name="description" content="">
@@ -98,7 +98,7 @@
  			<div id="mediaHolder" style="height:0px">
 				</div>
 			<canvas id="stage" width="950" height="608"></canvas>
-			<span  id="calculator"></span>
+			<span id="calculator"></span>
 		</div>
 		</div>
 
