--- a/fuentes/visuales/grado06/guion05/guionAbierto/CS_06_05_CO_Recurso070/Profesor.html
+++ b/fuentes/visuales/grado06/guion05/guionAbierto/CS_06_05_CO_Recurso070/Profesor.html
@@ -18,7 +18,7 @@
 		<p class="normal">
 			El interactivo puede utilizarse de forma secuencial o trabajar cada diapositiva independientemente.</p>
 		<p class="normal">
-			Como ejercicio previo a la presentaci&oacute;n, se sugiere&nbsp; motivar a los estudiantes con la visita a un resguardo ind&iacute;gena, actividad que les permitir&aacute; establecer contacto con la cosmovisi&oacute;n de las culturas ancestrales. Podr&aacute;n entrevistarse con las autoridades y compartir con la comunidad sus pr&aacute;cticas culturales.</p>
+			Como ejercicio previo a la presentaci&oacute;n, se sugiere&nbsp; motivar a los estudiantes para consultar acerca de un resguardo ind&iacute;gena, actividad que les permitir&aacute; establecer contacto con la cosmovisi&oacute;n de las culturas ancestrales. Podr&aacute;n reconocer las autoridades ind&iacute;genas y sus pr&aacute;cticas culturales.</p>
 		<p class="normal">
 			Otra posibilidad es pedir a los estudiantes que lleven a la clase informaci&oacute;n sobre alguno de los siguientes temas:</p>
 		<p class="tab1">
@@ -30,9 +30,9 @@
 		<p class="tab1">
 			- La biograf&iacute;a de Ger&oacute;nimo o de Cochise, guerreros apache.</p>
 		<p class="tab1">
-			- La construcci&oacute;n de un igl&uacute; entre los Inuit.</p>
+			- La construcci&oacute;n de un igl&uacute; entre los inuit.</p>
 		<p class="tab1">
-			- Las historias que dan sentido al atrapasue&ntilde;os Sioux.</p>
+			- Las historias que dan sentido al atrapasue&ntilde;os sioux.</p>
 		<p class="tab1">
 			- El significado espiritual del bisonte para las culturas ancestrales.</p>
 		<p class="tab1">
@@ -64,12 +64,13 @@
 			- Tipis<br />
 			- Inipi</p>
 		<p>
-			La propuesta es que a medida que se presenta cada diapositiva, se estimule a los estudiantes para que cuestionen el estereotipo que representa a las culturas ancestrales norteamericanas como pertenecientes al pasado, es decir, que se presenten como culturas vivas que hasta hoy han defendido y conservado las tradiciones culturales que legaron sus ancestros.<br />
+			La propuesta es que a medida que se presenta cada diapositiva, se estimule a los estudiantes para que cuestionen el estereotipo que representa a las culturas ancestrales norteamericanas como pertenecientes al pasado, es decir, que se presenten como culturas vivas que hasta hoy han defendido y conservado las tradiciones culturales que legaron sus ancestros.</p>
+		<p>
 			Se sugiere que durante la presentaci&oacute;n se destaque la relaci&oacute;n que dichas culturas establecieron con la naturaleza como base de su pensamiento y de sus relaciones sociales.</p>
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p>
-			Para asegurar la comprensi&oacute;n de la informaci&oacute;n presentada en el interactivo se propone organizar a los estudiantes en equipos de trabajo para que, con base en base en la informaci&oacute;n aportada en cada diapositiva, elaboren un p&aacute;rrafo en el que planteen las conclusiones a las cuales llegaron tras la presentaci&oacute;n y los di&aacute;logos; finalmente, las presentar&aacute;n al grupo.</p>
+			Para asegurar la comprensi&oacute;n de la informaci&oacute;n presentada en el interactivo se propone organizar a los estudiantes en equipos de trabajo para que, con base en base en la informaci&oacute;n aportada en cada diapositiva, escriban un p&aacute;rrafo en el que planteen las conclusiones a las cuales llegaron tras la presentaci&oacute;n y los di&aacute;logos; finalmente, las presentar&aacute;n al grupo.</p>
 		<p>
 			Tambi&eacute;n puede organizar equipos de estudiantes para profundizar en aquellas pr&aacute;cticas culturales de los pueblos ancestrales norteamericanos y que hoy se siguen llevando a cabo en distintos contextos. Por ejemplo las ceremonias propias del camino rojo, tales como el c&iacute;rculo de palabra, el c&iacute;rculo de mujeres, la ceremonia de cuatro tabacos o la b&uacute;squeda de visi&oacute;n. &nbsp; &nbsp;</p>
 	</body>
