--- a/fuentes/visuales/grado08/guion12/guionAbierto/CS_08_12_CO_Recurso050/Alumno.html
+++ b/fuentes/visuales/grado08/guion12/guionAbierto/CS_08_12_CO_Recurso050/Alumno.html
@@ -32,6 +32,6 @@
 			- Elegir a sus representantes.<br />
 			- Hacer seguimiento a la labor de los representantes.</p>
 		<p>
-			Conoce m&aacute;s sobre el sentido de <span class="negrita">la <span class="cursiva">polis </span>y su importancia a pol&iacute;tica y democr&aacute;tica</span> por medio del an&aacute;lisis de este mapa conceptual [<a href="http://hispanicasaber.planetasaber.com/encyclopedia/default.asp?idreg=554073&amp;ruta=Buscador" target="_blank">VER</a>].</p>
+			Conoce m&aacute;s sobre el sentido de <span class="negrita">la <span class="cursiva">polis </span>y su importancia pol&iacute;tica y democr&aacute;tica</span> en [<a href="http://hispanicasaber.planetasaber.com/encyclopedia/default.asp?idreg=554073&amp;ruta=Buscador" target="_blank">VER</a>].</p>
 	</body>
 </html>
