--- a/fuentes/visuales/grado08/guion12/guionAbierto/CS_08_12_CO_Recurso050/Profesor.html
+++ b/fuentes/visuales/grado08/guion12/guionAbierto/CS_08_12_CO_Recurso050/Profesor.html
@@ -32,7 +32,7 @@
 			- &iquest;C&oacute;mo Pericles mejor&oacute; la democracia?<br />
 			- &iquest;Cu&aacute;les eran las principales diferencias entre Atenas y Esparta en cuanto al gobierno?</p>
 		<p>
-			Para continuar, invite a los estudiantes a que piensen en las caracter&iacute;sticas de un ciudadano actual y a que las comparen (encontrando similitudes y diferencias) con las de los ciudadanos de la civilizaci&oacute;n griega. Luego ll&eacute;velos a reflexionar sobre la ciudadan&iacute;a como fruto de luchas civiles.</p>
+			Para continuar, invite a los estudiantes a que piensen en las caracter&iacute;sticas de un ciudadano actual y a que las comparen (encontrando similitudes y diferencias) con las de los ciudadanos de la civilizaci&oacute;n griega. Luego, ll&eacute;velos a reflexionar sobre la ciudadan&iacute;a como fruto de luchas civiles.</p>
 		<p>
 			Para terminar la sesi&oacute;n, p&iacute;dales a los estudiantes que consulten m&aacute;s informaci&oacute;n sobre Pericles y la democracia ateniense en el gran art&iacute;culo tem&aacute;tico de la Gran Enciclopedia Planeta [<a href="/BCRedir.aspx?URL=/encyclopedia/default.asp?idreg=554031&amp;ruta=Buscador" target="_blank">VER</a>].</p>
 	</body>
