--- a/fuentes/visuales/grado06/guion06/guionAbierto/CS_06_06_CO_Recurso040/Alumno.html
+++ b/fuentes/visuales/grado06/guion06/guionAbierto/CS_06_06_CO_Recurso040/Alumno.html
@@ -7,15 +7,17 @@
 		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
+		<p class="cabecera2">
+			Desarrollo de la familia chibcha</p>
 		<p>
-			El desarrolo de la familia chibcha tiene una procedencia que data del siglo VI a.C. hasta el siglo XVI, tiempo en que llegaron los espa&ntilde;oles. La ubicaci&oacute;n de esta poblaci&oacute;n se centro en los departamentos de Cundinamarca y Boyac&aacute;, especialmente hacia la zona del altiplano si desconocer regiones hacia el norte y suroccidente del pais.</p>
+			Tiene una procedencia que data del siglo VI a.C. hasta el siglo XVI, tiempo en que llegaron los espa&ntilde;oles. La ubicaci&oacute;n de esta poblaci&oacute;n se centr&oacute; en los departamentos de <span class="negrita">Cundinamarca</span> y <span class="negrita">Boyac&aacute;</span>, especialmente hacia la zona del altiplano, sin desconocer regiones hacia el norte y suroccidente del pa&iacute;s.</p>
 		<p>
-			Eran gobernado por grandes caciques que conformaban confederaciones como la de Bacat&aacute;, donde gobernaba el Zipa, Hunza, gobernaba el Zaque, Sugamuxi que era un centro especialmente de adoraci&oacute;n al Dios Sol. La sociedad Chibcha era bien estartificada donde los m&aacute;s privilegiados eran la clase noble y la religiosa. Seguian a ellos los comerciantes y artesanos y finalmente se encontraba el pueblo, dedicado a la labor agr&iacute;cola, recolecci&oacute;n y de extracci&oacute;n.</p>
+			Eran gobernados por grandes <span class="negrita">caciques</span> que conformaban confederaciones como la de <span class="negrita">Bacat&aacute;</span>, donde gobernaba el <span class="negrita">Zipa </span>y&nbsp;<span class="negrita">Hunza</span>, donde gobernaba el <span class="negrita">Zaque</span>.<span class="negrita">&nbsp;</span>La sociedad chibcha era bien estratificada: los m&aacute;s privilegiados eran la clase noble y la religiosa; segu&iacute;an los comerciantes y artesanos y finalmente se encontraba el pueblo, dedicado a la labor agr&iacute;cola, recolecci&oacute;n y extracci&oacute;n.</p>
 		<p>
-			La base de la econom&iacute;a de estos pueblos fue la agricultura, y de su alimentaci&oacute;n el ma&iacute;z. Otros elementos como el oro, las esmeraldas, la sal, los tejidos, las plumas y el cobre tuvieron gran acogida entre los pueblos por sus diferentes labores siendo la fuente de intercambio entre ellos.</p>
+			La base de la econom&iacute;a de estos pueblos fue la <span class="negrita">agricultura</span>, y de su alimentaci&oacute;n, el <span class="negrita">ma&iacute;z</span>. Otros elementos como el oro, las esmeraldas, la sal, los tejidos, las plumas y el cobre tuvieron gran acogida entre los pueblos por sus diferentes labores siendo la fuente de intercambio entre ellos.</p>
 		<p>
-			Para esta familia, el respeto por sus tradiciones, la figura del cham&aacute;n, sacerdote, mamo y dem&aacute;s nombres que cada una adjudicar&aacute; represent&oacute; para la sociedad la uni&oacute;n entre quienes moraban la tierra de los mortales con las divinidades que se encontraban en el firmamento y los bendecian con sus diversos poderes. Represent&oacute; la necesidad de &nbsp;adorar y ofrendar para recibir beneficios, mejores cosechas y dem&aacute;s favores que se necesitaran en favor del pueblo y tambi&eacute;n a titulo personal.</p>
+			Para esta familia el respeto por sus tradiciones, la figura del cham&aacute;n, sacerdote, mamo o dem&aacute;s nombres que cada una adjudicar&aacute; represent&oacute; para la sociedad la uni&oacute;n entre quienes moraban la tierra de los mortales con las divinidades que se encontraban en el firmamento y los bendecir&iacute;an con sus diversos poderes. Todos sent&iacute;an la <span class="negrita">necesidad de adorar y ofrendar</span> para recibir beneficios, mejores cosechas y dem&aacute;s favores que se necesitaran en pro del pueblo y tambi&eacute;n a t&iacute;tulo personal.</p>
 		<p>
-			<span style="line-height: 1em; font-size: 1em;">Queda el legado de a&ntilde;os de tradici&oacute;n, de riqueza, de sabor a ma&iacute;z, a olor de tierra h&uacute;meda, de la belleza del color verde esmeralda, del brillo hermoso de la sal. a la piel trigue&ntilde;a y el cabello oscuro de la raza.</span></p>
+			<span style="line-height: 1em; font-size: 1em;">Queda el legado de a&ntilde;os de tradici&oacute;n, de riqueza, de sabor a ma&iacute;z, de olor a tierra h&uacute;meda, de la belleza del color verde esmeralda, del brillo hermoso de la sal y la piel trigue&ntilde;a y el cabello oscuro de la raza.</span></p>
 	</body>
 </html>
