--- a/fuentes/visuales/grado06/guion06/guionAbierto/CS_06_06_CO_Recurso040_/Profesor.html
+++ b/fuentes/visuales/grado06/guion06/guionAbierto/CS_06_06_CO_Recurso040_/Profesor.html
@@ -10,34 +10,32 @@
 		<p class="cabecera1">
 			Objetivo</p>
 		<p class="normal">
-			Presentar las caracter&iacute;sticas m&aacute;s importantes de la familia chibcha.</p>
+			Presentar las caracter&iacute;sticas m&aacute;s importantes de la Familia Chibcha.</p>
 		<p class="cabecera1">
 			Propuesta</p>
 		<p class="cabecera2">
 			Antes de la presentaci&oacute;n</p>
 		<p>
-			Antes del inicio de la actividad pregunte a sus estudiantes:</p>
+			Previamente al inicio de la actividad, pregunte a sus estudiantes:</p>
 		<p class="tab1">
-			- &iquest;Por qu&eacute; las culturas ind&iacute;genas colombianas se dividieron en familias?</p>
+			- &iquest;Por qu&eacute; se divide en familias las culturas ind&iacute;genas colombianas?</p>
 		<p class="tab1">
-			- &iquest;Qu&eacute; grupos ind&iacute;genas pertenecen a la familia chibcha?</p>
+			- &iquest;Qu&eacute; grupos indigenas pertenecen a esta familia?</p>
 		<p class="tab1">
 			- &iquest;Qu&eacute; circunstancias hist&oacute;ricas han marcado a estos pueblos?</p>
 		<p class="tab1">
-			- &iquest;Qu&eacute; legado cultural, econ&oacute;mico y social nos dejaron?</p>
+			- &iquest;Qu&eacute; legado cultural, econ&oacute;mico, social nos han dejado?</p>
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p>
-			<span style="line-height: 1em; font-size: 1em;">Una vez vistas y analizadas las caracter&iacute;sticas de cada poblaci&oacute;n conforme grupos de tres estudiantes para realizar las siguientes actividades:</span></p>
+			<span style="line-height: 1em; font-size: 1em;">Una vez vista y analizadas las caracter&iacute;sticas de cada poblaci&oacute;n conforme grupos de tres estudiantes. </span></p>
 		<p class="tab1">
-			<span style="line-height: 1em; font-size: 1em;">1. Utilizando un mapa, ubicar los pueblos que conforman la familia chibcha.</span></p>
+			<span style="line-height: 1em; font-size: 1em;">1. Utilizando un mapa ubicar los pueblos que conforman la familia chibcha.</span></p>
 		<p class="tab1">
-			<span style="line-height: 1em; font-size: 1em;">2. En cuadro comparativo, se&ntilde;alar las actividades por las que cada pueblo ha sobresalido.</span></p>
+			<span style="line-height: 1em; font-size: 1em;">2. En cuadro comparativo se&ntilde;alar las actividades por las que cada pueblo ha sobresalido.</span></p>
 		<p class="tab1">
 			<span style="line-height: 1em; font-size: 1em;">3. Construir una reflexi&oacute;n en torno a la situaci&oacute;n de los ind&iacute;genas en Colombia.</span></p>
 		<p>
-			Con base en este trabajo, cada grupo expondr&aacute; sus hallazgos oralmente.</p>
-		<p>
-			&nbsp;</p>
+			Con base a este trabajo, cada grupo expondr&aacute; sus hallazgos oralmente.&nbsp;</p>
 	</body>
 </html>
