--- a/fuentes/visuales/grado09/guion13/guionAbierto/CS_09_13_CO_Recurso070/Profesor.html
+++ b/fuentes/visuales/grado09/guion13/guionAbierto/CS_09_13_CO_Recurso070/Profesor.html
@@ -18,7 +18,7 @@
 		<p class="normal">
 			<span style="line-height: 1em; font-size: 1em;">Para iniciar el trabajo, se propone realizar un ejercicio de ambientaci&oacute;n con los estudiantes. Para ello, p&iacute;dales que, organizados en grupos, preparen una &quot;puesta en escena&quot; en la que presenten una situaci&oacute;n relacionada con &quot;un mundo sin derechos humanos&quot;.</span></p>
 		<p class="tab1">
-			1. Organice los estudiantes por grupos de 6 o 7 integrantes.</p>
+			1. Organice los estudiantes en grupos de 6 o 7 integrantes.</p>
 		<p class="tab1">
 			2. P&iacute;dales que discutan la siguiente pregunta: &iquest;C&oacute;mo ser&iacute;a un mundo en el que no existan los derechos humanos?&nbsp;</p>
 		<p class="tab1">
